fix(announcement bar): better contrast

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -4,7 +4,7 @@
   }
 
   [class*='announcementBar_'] {
-    background: linear-gradient(90deg, #440f14, #5e1219 15%, #03060b 35%, #03060b 45%, #5e1219 85%, #440f14);
+    background: linear-gradient(90deg, #440f14, #5e1219 15%, #000 35%, #000 45%, #5e1219 85%, #440f14);
 
     &:hover,
     &:focus,
